Bug 1660218 - Ensure consistent handling of portrait/landscape dimension swapping in nsPrintSettingsX. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D87863